--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <article>
 
             <p>
-                Olá! eu sou o lucas, estou começando a desenvolver web e gosto de pokemon! adicionado mais um texto
+                Olá! eu sou o lucas, estou começando a desenvolver web e gosto de pokemon! adicionado mais um texto1
             </p>
 
         </article>
